Visible text Fix

--- a/welcomAnim.css
+++ b/welcomAnim.css
@@ -73,6 +73,8 @@ h3{
 }
 
 .pic{
+		color: transparent; 
+	
     background-position: center center;
     background-size: 120%;
     background-repeat:no-repeat;
